changed background and text boxes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <h1> Bank of Your Mom</h1>
   <div class="container">
   <div class="checking">
+	<div class="border">
     <h2> Checking </h2>
     <h2> Balance: $<span id="checking_balance"></span></h2>
     <form id="checking_form">
@@ -15,9 +16,11 @@
       <button class="button_deposit">Deposit</button>
       <input class="withdrawal" type="text">
       <button class="button_withdrawal">Withdrawal</button>
+      </div>
     </form>
   </div>
   <div class="savings">
+	<div class="border">
 	 <h2>Savings</h2>
 	<h2>Balance: $<span id="savings_balance"></span></h2> 
     <form id="savings_form">
@@ -26,6 +29,7 @@
       <input class="withdrawal" type="text">
       <button class="button_withdrawal">Withdrawal</button>
     </form>
+    </div>
   </div>
 </div>
 </body>
