--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="script.js"></script>
 <link rel="stylesheet" href="styles.css">
 <body>
-  <h1> Bank of Your Mom</h1>
+  <h1><strong> Bank of WDI</strong></h1>
   <div class="container">
   <div class="checking">
 	<div class="border">
